[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/godotWad/scenes/guns/gun.gd" type="Script" id=1]
[ext_resource path="res://addons/godotWad/scenes/guns/gunGenerator.gd" type="Script" id=2]
[ext_resource path="res://addons/godotWad/scenes/guns/template/gunSounds.gd" type="Script" id=3]
[ext_resource path="res://addons/godotWad/sprites/bulletImpact.png" type="Texture" id=4]
[ext_resource path="res://addons/godotWad/scenes/quad3Dsprite.tscn" type="PackedScene" id=5]

[sub_resource type="QuadMesh" id=3]
size = Vector2( 1.271, 1.767 )

[sub_resource type="SphereShape" id=2]
radius = 19.709

[node name="gunbase" type="Spatial"]
script = ExtResource( 1 )
weaponName = "shotgun"
category = 2
idleAnims = [ "idle" ]
fireAnims = [ "fire" ]
bulletImpactTexture = ExtResource( 4 )
shootDurationMS = 750
magSize = 0
initialSpread = Vector2( 18, 0 )
maxSpread = Vector2( 18, 0 )
firstShotAccuracy = 0

[node name="shootCast" type="RayCast" parent="."]
cast_to = Vector3( -1, 0, 0 )

[node name="AnimatedSprite3D" parent="." instance=ExtResource( 5 )]
mesh = SubResource( 3 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
script = ExtResource( 3 )

[node name="Generator" type="Node" parent="."]
script = ExtResource( 2 )
idleSpriteNames = [ "SHTGA0" ]
shootSpriteNames = [ "SHTGB0", "SHTGC0", "SHTGD0" ]
worldSprite = "SHOTA0"
idleAnimDuration = 0
viewportTranslation = Vector3( 0, -40, 0 )
extraYShift = 0

[node name="soundAlert" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="soundAlert"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
