[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/godotWad/scenes/guns/gun.gd" type="Script" id=1]
[ext_resource path="res://addons/godotWad/scenes/guns/gunGenerator.gd" type="Script" id=2]
[ext_resource path="res://addons/godotWad/scenes/guns/template/gunSounds.gd" type="Script" id=3]

[node name="shotgun2" type="Spatial"]
script = ExtResource( 1 )
weaponName = "shotgun"
category = 2
ammoType = "shell"
idleAnims = [ "idle" ]
fireAnims = [ "fire" ]
shootDurationMS = 750
magSize = -1
initialSpread = Vector2( 18, 0 )
maxSpread = Vector2( 18, 0 )
bulletPerShot = 7
firstShotAccuracy = 0
firstShotCooldonwMS = 0

[node name="shootCast" type="RayCast" parent="."]
cast_to = Vector3( -1, 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = -15.0
script = ExtResource( 3 )

[node name="Generator" type="Node" parent="."]
script = ExtResource( 2 )
idleSpriteNames = [ "SHTGA0" ]
shootSpriteNames = [ "SHTGB0", "SHTGC0", "SHTGD0" ]
worldSprite = "SHOTA0"
idleAnimDuration = 0
shootAnimDurationMS = 300
fireSounds = [ "DSSHOTGN" ]

[node name="SpriteFrames" type="AnimatedSprite3D" parent="."]
